--- a/index.html
+++ b/index.html
@@ -26,12 +26,128 @@
             </div>
         </div>
     </header>
-    <div><img src="img/1.webp" alt=""></div>
-    <div><img src="img/1.webp" alt=""></div>
-    <div><img src="img/1.webp" alt=""></div>
-    <div><img src="img/1.webp" alt=""></div>
-    <div><img src="img/1.webp" alt=""></div>
-    <div><img src="img/1.webp" alt=""></div>
-    
+    <main>
+        <div class="container">
+            <div class="row flex flex-wrap">
+                <!--main-card-1-->
+                <div class="col">
+                    <div class="card">
+                        <div class="img-cont">
+                            <img class="img-def" src="img/1.webp" alt="img orig">
+                            <img class="img-hover" src="img/1b.webp" alt="img hover">
+                        </div>
+                        <div class="brand font-sz-s">Levi's</div>
+                        <h4 class="model-prod font-sz-m">RELAXED FIT TEE UNISEX</h4>
+                        <div>
+                            <span class="price-now font-sz-s clr-red">14,99&euro;</span>
+                            <span class="price-before font-sz-s line-through">29,99&euro;</span>
+                        </div> 
+                        <div class="row-small-box flex">
+                            <div class="disc-box bg-red font-sz-s clr-white txt-center">-50&percnt;</div>
+                            <div class="sost-box bg-green font-sz-s clr-white txt-center">Sostenibilità</div>
+                        </div> 
+                        <button class="fav-box bg-white clr-black flex flex-center"><i class="fa-solid fa-heart"></i></button>
+                    </div>
+                </div>
+
+                <!--main-card-2-->
+                <div class="col">
+                    <div class="card">
+                        <div class="img-cont">
+                            <img class="img-def" src="img/2.webp" alt="img orig">
+                            <img class="img-hover" src="img/2b.webp" alt="img hover">
+                        </div>
+                        <div class="brand font-sz-s">Guess</div>
+                        <h4 class="model-prod font-sz-m">ROSES TEE</h4>
+                        <div>
+                            <span class="price-now font-sz-s clr-red">20,99&euro;</span>
+                            <span class="price-before font-sz-s line-through">29,99&euro;</span>
+                        </div> 
+                        <div class="row-small-box flex">
+                            <div class="disc-box bg-red font-sz-s clr-white txt-center">-30&percnt;</div>
+                        </div> 
+                        <button class="fav-box bg-white clr-black flex flex-center"><i class="fa-solid fa-heart"></i></button>
+                    </div>
+                </div>
+
+                <!--main-card-3-->
+                <div class="col">
+                    <div class="card">
+                        <div class="img-cont">
+                            <img class="img-def" src="img/3.webp" alt="img orig">
+                            <img class="img-hover" src="img/3b.webp" alt="img hover">
+                        </div>
+                        <div class="brand font-sz-s">Come zucchero filato</div>
+                        <h4 class="model-prod font-sz-m">VOGLIA DI COLORI PASTELLO</h4>
+                        <div>
+                            <span class="price-now font-sz-s clr-red">129,99&euro;</span>
+                            <span class="price-before font-sz-s line-through">184,99&euro;</span>
+                        </div> 
+                        <div class="row-small-box flex">
+                            <div class="disc-box bg-red font-sz-s clr-white txt-center">-30&percnt;</div>
+                        </div> 
+                        <button class="fav-box bg-white clr-black flex flex-center"><i class="fa-solid fa-heart"></i></button>
+                    </div>
+                </div>
+
+                <!--main-card-4-->
+                <div class="col">
+                    <div class="card">
+                        <div class="img-cont">
+                            <img class="img-def" src="img/4.webp" alt="img orig">
+                            <img class="img-hover" src="img/4b.webp" alt="img hover">
+                        </div>
+                        <div class="brand font-sz-s">Levi's</div>
+                        <h4 class="model-prod font-sz-m">TEE UNISEX</h4>
+                        <div>
+                            <span class="price-now font-sz-s clr-red">14,99&euro;</span>
+                            <span class="price-before font-sz-s line-through">29,99&euro;</span>
+                        </div> 
+                        <div class="row-small-box flex">
+                            <div class="disc-box bg-red font-sz-s clr-white txt-center">-50&percnt;</div>
+                            <div class="sost-box bg-green font-sz-s clr-white txt-center">Sostenibilità</div>
+                        </div> 
+                        <button class="fav-box bg-white clr-black flex flex-center"><i class="fa-solid fa-heart"></i></button>
+                    </div>
+                </div>
+
+                <!--main-card-5-->
+                <div class="col">
+                    <div class="card">
+                        <div class="img-cont">
+                            <img class="img-def" src="img/5.webp" alt="img orig">
+                            <img class="img-hover" src="img/5b.webp" alt="img hover">
+                        </div>
+                        <div class="brand font-sz-s">Maya Deluxe</div>
+                        <h4 class="model-prod font-sz-m">STRIPE BODICE</h4>
+                        <div>
+                            <span class="price-now font-sz-s clr-red">99,99&euro;</span>
+                        </div> 
+                        <button class="fav-box bg-white clr-black flex flex-center"><i class="fa-solid fa-heart"></i></button>
+                    </div>
+                </div>
+
+                <!--main-card-6-->
+                <div class="col">
+                    <div class="card">
+                        <div class="img-cont">
+                            <img class="img-def" src="img/6.webp" alt="img orig">
+                            <img class="img-hover" src="img/6b.webp" alt="img hover">
+                        </div>
+                        <div class="brand font-sz-s">Espirit</div>
+                        <h4 class="model-prod font-sz-m">MAGLIONE - BLACK</h4>
+                        <div>
+                            <span class="price-now font-sz-s clr-red">29,99&euro;</span>
+                        </div> 
+                        <div class="row-small-box flex">
+                            <div class="sost-box bg-green font-sz-s clr-white txt-center">Sostenibilità</div>
+                        </div> 
+                        <button class="fav-box bg-white clr-black flex flex-center"><i class="fa-solid fa-heart"></i></button>
+                    </div>
+                </div>
+  
+            </div>
+        </div>
+    </main>
 </body>
 </html>
