--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div class="container">
-            <div class="row flex flex-wrap">
+            <div class="row-main flex flex-wrap">
                 <!--main-card-1-->
                 <div class="col">
                     <div class="card">
@@ -149,5 +149,31 @@
             </div>
         </div>
     </main>
+
+    <!--footer-->
+    <footer>
+        <div class="container">
+            <div class="row-ftr flex">
+                <div class="ftr-left-side flex">
+                    <h4>Boolando s.r.l</h4>
+                    <div class="ftr-row-a-left flex font-sz-s">
+                        <a href="#">Informazioni legali</a>
+                        <a href="#">Informatica sulla privacy</a>
+                        <a href="#">Diritto di recesso</a>
+                    </div>
+                </div>
+                <div class="ftr-right-side flex">
+                    <p class="txt-center font-sz-s">Trovaci anche su</p>
+                    <div class="ftr-row-a-right flex font-sz-m">
+                        <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-pinterest"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
